syntax = "proto3";

package user.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/user;pb_usr";

import "google/api/annotations.proto";
import "user/login_message.proto";
import "user/register_message.proto";
import "user/captcha_message.proto";

service AuthService {
	rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
		option (google.api.http) = {
			post: "/v1/auth/login"
      body: "*"
		};
	}
	rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
		option (google.api.http) = {
			post: "/v1/auth/register"
      body: "*"
		};
	}
	rpc SendCaptcha(SendCaptchaRequest) returns (SendCaptchaResponse) {
		option (google.api.http) = {
			post: "/v1/auth/captcha"
      body: "*"
		};
	}
}
