syntax = "proto3";

package user.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/user;pb_usr";

message SendCaptchaRequest {
	string email = 1;
}

message SendCaptchaResponse {
	int32 today_left_times = 1;
}
