syntax = "proto3";

package user.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/user;pb_usr";

import "user/user.proto";

message LoginUserRequest {
	string email = 1;
	string password = 2;
}

message LoginUserResponse {
	string token = 1;
	User user = 2;
}
