syntax = "proto3";

package user.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/user;pb_usr";

import "user/user.proto";

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string nickname = 3;
		string captcha = 4;
}

message RegisterUserResponse {
    User user = 1;
}
